--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,11 @@
 
 <div id="data">
 
-<div class= "container"><p>{{text}}</p></div>	
+<div class= "container"><p>{{users}}</p></div>	
+
+{% for key, value in users.items() %}
+      <h1>Key: {{key}}</h1>
+      <h2>Value: {{value}}</h2>
+{% endfor %}
 
 </div>
