--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     text-align: center;
   }
 </style>
-<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="jquery.js"></script>
 <script>
 if (!!window.EventSource) {
   var source = new EventSource('/');
